tests/snapshots/examples_fixtures/type_system__failing__170_match_disagreement_all_concrete_ordering_invariant_e300.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/170_match_disagreement_all_concrete_ordering_invariant_e300.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `y` does not match its type annotation.

  examples/type_system/failing/170_match_disagreement_all_concrete_ordering_invariant_e300.flx:2:18
  |
2 |     let y: Int = match true {
  |                  ^^^^^^^^^^^^
  |            --- but `y` was annotated as `Int`
3 |         true -> "oops",
  | ^^^^^^^^^^^^^^^^^^^^^^^
4 |         false -> 1,
  | ^^^^^^^^^^^^^^^^^^^
5 |     }
  | ^^^^^

Note:
  annotated type: Int
  value type: String

Help:
  Change `y` to a `Int` value or update the annotation.
== stdout ==
<not executed>
