tests/snapshots/examples_fixtures/type_system__failing__174_handle_missing_lbrace.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/174_handle_missing_lbrace.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Unexpected Token

Expected `{` to begin `handle` arms.

  examples/type_system/failing/174_handle_missing_lbrace.flx:24:21
   |
24 | let x = 1 handle IO print(resume, msg) -> resume(msg)
   |                     ^^^^^

Hint:
  Handle expressions use `expr handle Effect { ... }`.

Note:
  while parsing `handle` expression


error[E031]: Expected Expression

Expected expression, found `->`.

  examples/type_system/failing/174_handle_missing_lbrace.flx:24:40
   |
24 | let x = 1 handle IO print(resume, msg) -> resume(msg)
   |                                        ^^

Found 2 errors.
== stdout ==
<not executed>
