tests/snapshots/examples_fixtures/type_system__failing__177_module_missing_open_brace.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/177_module_missing_open_brace.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E034]: UNEXPECTED TOKEN

Expected `{` to begin module body.

  --> examples/type_system/failing/177_module_missing_open_brace.flx:2:1
  |
2 | let x = 1
  | ^^^

Hint:
  Module declarations use `module Name { ... }`.
== stdout ==
<not executed>
