tests/snapshots/examples_fixtures/type_system__failing__179_data_missing_open_brace.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/179_data_missing_open_brace.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Data Body

Expected `{` to begin data constructors.

  examples/type_system/failing/179_data_missing_open_brace.flx:24:15
   |
24 | data Maybe<T> Some(T), None }
   |               ^^^^

Hint:
  Data declarations use `data TypeName { Ctor, ... }`.

Note:
  while parsing data declaration `Maybe`


error[E031]: Expected Expression

Expected expression, found `,`.

  examples/type_system/failing/179_data_missing_open_brace.flx:24:22
   |
24 | data Maybe<T> Some(T), None }
   |                      ^

Found 2 errors.
== stdout ==
<not executed>
